# shadow

./: CMakeLists.txt  README.md  ReleaseNotes.md  ReleaseNotes_Android.md  ReleaseNotes_Pre3.0.md  ReleaseNotes_Pre4.0.md  configure.ac
.github/workflows/: build-Mac.yml  build-android.yml  build-develop-android.yml  build-develop.yml  build-featurebranch-android.yml  build-featurebranch.yml  build-master.yml
Docker/Android/: Dockerfile  Dockerfile_noUpload
Docker/CentOS/: Dockerfile  Dockerfile_noUpload
Docker/Debian/: Dockerfile_Bullseye  Dockerfile_Bullseye_noUpload  Dockerfile_Buster  Dockerfile_Buster_noUpload  Dockerfile_Stretch  Dockerfile_Stretch_noUpload
Docker/Fedora/: Dockerfile  Dockerfile_noUpload
Docker/OpenSUSE/: Dockerfile  Dockerfile_noUpload
Docker/RaspberryPi/: Dockerfile_Buster  Dockerfile_Buster_noUpload
Docker/Ubuntu/: Dockerfile_18_04  Dockerfile_18_04_noUpload  Dockerfile_20_04  Dockerfile_20_04_noUpload
doc/: MacOSX-build-instructions-README.md
scripts/: cmake-build-android_arm64.sh  cmake-build-android_armv7.sh  cmake-build-android_x86-64.sh  cmake-build-mac.sh  cmake-build-win-x86.bat  cmake-build.sh  cmake-build_x86.sh  cmake-fullbuild-android-app.sh
scripts/include/: handle_buildconfig.sh
src/: CMakeLists.txt  chainparams.cpp  net.cpp  tests.pro
src/android/java/org/alias/wallet/: AliasActivity.java  AliasService.java  BiometricActivity.java  BootstrapService.java
src/android/res/values/: strings.xml
src/android/res/values-de/: strings.xml
src/android/res/values-fr/: strings.xml
src/osx/: MacOSXBundleInfo.plist.in
src/qt/: alias_locale.qrc  clientmodel.cpp  rpcconsole.cpp  spectre.cpp  spectreclientbridge.cpp
src/qt/locale/: alias_de.ts  alias_en.ts  alias_es.ts
src/qt/test/: CMakeLists.txt  test_main.cpp
src/test/: CMakeLists.txt  Checkpoints_tests.cpp  bip32_tests.cpp  extkey_tests.cpp  key_tests.cpp  ringsig_tests.cpp  script_tests.cpp  test_alias.cpp
src/test/data/: base58_keys_valid.json
